src/core-crm/objects/Designation_Code_Auto_Number__c/Designation_Code_Auto_Number__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Designation Code Auto Number</label>
</CustomObject>