src/core-crm/objects/Designation_Code_Auto_Number__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Designation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>