src/core-crm/objects/Designation_Code_Auto_Number__c/fields/Endowment__c.field-meta.xml
<CustomField>
    <fullName>Endowment__c</fullName>
    <description>Designation Endowment Auto Number</description>
    <label>Endowment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>