src/core-crm/objects/Designation_Code_Auto_Number__c/fields/Giving_To_Cause__c.field-meta.xml
<CustomField>
    <fullName>Giving_To_Cause__c</fullName>
    <description>Designation Giving to Cause Auto Number</description>
    <label>Giving To Cause</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>